--- a/app/src/debug/res/xml-v25/shortcuts.xml
+++ b/app/src/debug/res/xml-v25/shortcuts.xml
@@ -12,7 +12,7 @@
         <intent
             android:action="com.full.torrent.no.ads.private1.encrypted.ADD_TORRENT_SHORTCUT"
             android:targetClass="com.full.torrent.no.ads.private1.encrypted.ui.main.MainActivity"
-            android:targetPackage="com.full.torrent.no.ads.private1.encrypted" />
+            android:targetPackage="com.full.torrent.no.ads.encrypted" />
     </shortcut>
 
     <shortcut
@@ -24,6 +24,6 @@
         <intent
             android:action="android.intent.action.VIEW"
             android:targetClass="com.full.torrent.no.ads.private1.encrypted.ui.addfeed.AddFeedActivity"
-            android:targetPackage="com.full.torrent.no.ads.private1.encrypted" />
+            android:targetPackage="com.full.torrent.no.ads.encrypted" />
     </shortcut>
 </shortcuts>
